	PR rtl-optimization/47612 	* df-problems.c (can_move_insns_across): Don't pick a cc0 setter 	as the last insn of the sequence to be moved.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@173393 138bc75d-0d04-0410-961f-82ee72b054a4